/*
Copyright 2018 Google Inc. All Rights Reserved.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package cloud_ingest_pulse;
option go_package = "github.com/GoogleCloudPlatform/cloud-ingest/proto/pulse_go_proto";

// The Agent periodically sends this msg to the DCP. The DCP uses this info to
// know that the Agent is alive, and to expose info about that Agent.
message Msg {
  AgentId agent_id = 1;  // The unique id for each agent.
  string agent_version = 3;   // The version of the agent.
  string agent_logs_dir = 4;  // The directory where the agents writes its logs.
  int64 agent_transferred_bytes = 6;  // Bytes the Agent wrote 'to the wire'.
  int64 agent_uptime_ms = 7;  // Time in millis since agent startup.
  int64 agent_transferred_list_bytes = 8;  // Bytes the Agent wrote during listing.

  reserved 2, 5;  // Don't reuse tags.
}

// This message stores a unique identifier for each agent.
// The DCP can use this to separate each agent and monitor future behaviors.
message AgentId {
  string host_name = 1;   // The host name of the client running the agent.
  string process_id = 2;  // The process id of the client running the agent.
  string prefix = 3;      // A user-specified ID string prefix.
}
